[package]
name = "myip"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.4", features = ["http2"] }
axum-extra = { version = "0.4.2", features = ["erased-json"] }
tokio = { version = "1.25", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.3.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
ipinfo = { git = "https://github.com/jerryshell/ipinfo-rust-lib" }
dotenv = "0.15"

[profile.release]
lto = true
strip = true
