[package]
name = "myip"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "*", features = ["http2"] }
axum-extra = { version = "*", features = ["erased-json"] }
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-appender = "*"
tracing-subscriber = "*"
tower-http = { version = "*", features = ["cors"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
ipinfo = { git = "https://github.com/jerryshell/ipinfo-rust-lib" }
dotenv = "*"

[profile.release]
lto = true
strip = true
panic = "abort"
codegen-units = 1
